# rag-reflect

./: .env  .gitignore  README.md  ingestion.py  main.py  pyproject.toml
.chroma/: chroma.sqlite3
graph/: graph.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/chains/tests/.chroma/21d52375-139b-4647-819a-918d1f296ec1/: index_metadata.pickle
graph/nodes/: grade_documents.py  web_search.py
